<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".OtpVerify">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/img_2"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/otp_verification"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:maxLines="3"
            android:text="@string/text2"
            android:textColor="@color/black"
            android:textSize="10sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/enter_otp_password"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <!-- OTP Input Fields with Dynamic Width -->
            <EditText
                android:id="@+id/otpField1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:autofillHints=""
                android:background="@drawable/buttondesign"
                android:gravity="center"
                android:hint="@string/_5"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/otpField2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:autofillHints=""
                android:background="@drawable/buttondesign"
                android:gravity="center"
                android:hint="@string/_7"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/otpField3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:autofillHints=""
                android:background="@drawable/buttondesign"
                android:gravity="center"
                android:hint="@string/_8"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/otpField4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:autofillHints=""
                android:background="@drawable/buttondesign"
                android:gravity="center"
                android:hint="@string/_1"

                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/otpField5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:autofillHints=""
                android:background="@drawable/buttondesign"
                android:gravity="center"
                android:hint="@string/_9"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/otpField6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:autofillHints=""
                android:background="@drawable/buttondesign"
                android:gravity="center"
                android:hint="@string/_2"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <!-- Proceed Button -->
        <Button
            android:id="@+id/verifyButton"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/blue"
            android:text="@string/proceed"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="18sp"/>
    </LinearLayout>
</ScrollView>
